<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    // Made for 6.2 display 1280x2340, ToDo responsive design

    <!-- Latitude ROW-->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/latitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/latitude_textview"
            android:layout_width="250dp"
            android:layout_height="55dip"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:ellipsize="start"
            android:gravity="bottom"
            android:maxLines="10000"
            android:scrollbars="vertical"
            android:textSize="12sp" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/holo_green_light" />

    <!-- Longitude ROW-->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/longitude"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/longitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/longitude_textview"
            android:layout_width="250dp"
            android:layout_height="55dip"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:ellipsize="start"
            android:gravity="bottom"
            android:maxLines="10000"
            android:scrollbars="vertical"
            android:textSize="12sp" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />


    <!-- Distance ROW-->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="16dp">

        <!--Distance label-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/distance"
            android:textSize="16sp" />

        <!--Distance TextView-->
        <TextView
            android:id="@+id/distance_textview"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="5dp"
            android:ellipsize="start"
            android:gravity="center_vertical"
            android:textSize="12sp" />

        <!--Distance TOTAL label-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/distanceTotal"
            android:textSize="16sp" />

        <!--Distance TOTAL TextView-->
        <TextView
            android:id="@+id/distanceTotal_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:ellipsize="start"
            android:gravity="center_vertical"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp" />
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <!-- Speed ROW-->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/speed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/speed_textview"
            android:layout_width="84dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="2dp"
            android:ellipsize="start"
            android:gravity="bottom|center_vertical"
            android:maxLines="10000"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:scrollbars="vertical"
            android:textSize="12sp" />

        <!-- Speed ROW MAX and TOTAL-->
        <LinearLayout
            android:layout_width="228dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <!-- Speed ROW MAX-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="3dp"
                    android:text="@string/maxSpeed"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/speedMax_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="12sp" />
            </TableRow>

            <!-- Speed ROW TOTAL-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:paddingLeft="3dp"
                    android:text="@string/maxSpeedTotal"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/speedMaxTotal_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="12sp" />
            </TableRow>

        </LinearLayout>

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <!-- Altitude ROW-->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/altitude"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/altitude_textview"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:ellipsize="start"
            android:gravity="bottom"
            android:maxLines="10000"
            android:scrollbars="vertical"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <!-- Altitude Trip ROW MIN-->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/minAltitude"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/altitudeMin_textview"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="12sp" />
            </TableRow>

            <!-- Altitude Trip ROW MAX-->
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/maxAltitude"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/altitudeMax_textview"
                    android:layout_width="55dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="12sp" />
            </TableRow>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <!-- Altitude TOTAL ROW MIN -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/minAltitudeTotal"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/altitudeMinTotal_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="12sp" />
            </TableRow>

            <!-- Altitude TOTAL ROW MAX-->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/maxAltitudeTotal"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/altitudeMaxTotal_textview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:ellipsize="start"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="12sp" />
            </TableRow>

        </LinearLayout>

    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartSpeed"
            android:layout_width="match_parent"
            android:layout_height="120dp"></com.github.mikephil.charting.charts.LineChart>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chartAltitude"
            android:layout_width="match_parent"
            android:layout_height="180dp"></com.github.mikephil.charting.charts.LineChart>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/StartButtonID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/START_gps_service"
                    android:onClick="startService"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/stopExitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:paddingRight="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/StopExit_gps_service"
                    android:onClick="stopExitService"/>

            </LinearLayout>

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/black" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

</LinearLayout>